05-ingress-controllers/my-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: evns/simple-service
        ports:
        - containerPort: 8080
