05-ingress-controllers/my-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: simple-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: my-ingress
  namespace: default
spec:
  rules:
  - host: my-host
    http:
      paths:
        - path: /
          backend:
            serviceName: my-service
            servicePort: 8080
